--- a/docs/_posts/1870-11-30-30-novembre-1870.md
+++ b/docs/_posts/1870-11-30-30-novembre-1870.md
@@ -23,7 +23,7 @@ pour avoir des nouvelles de la bouche même des nombreux blessés receuillis par
 les voitures d'ambulances.
 C'était un triste spectable, mais ils disaient tous,
 « <ins class="straight">nous en viendrons à bout, car nous ne les craignons guère.</ins> »
-Il se passait, au même moment, une action fortement engagée de côté de
+Il se passait, au même moment, une action fortement engagée du côté de
 Charenton, canonade et fusillade étaient constantes, je vous dirai demain
 quelques détails sur cette affaire qui n'a pas duré moins de 10 heures dit-on.
 
