--- a/docs/_posts/1870-11-17-17-novembre-1870.md
+++ b/docs/_posts/1870-11-17-17-novembre-1870.md
@@ -40,7 +40,7 @@ Voici les 4 questions:
 Quant à la dépêche plus détaillée que vous seriez disposé à m'adresser, je vous
 enverrai, dans ma lettre de demain, un certain nombre de Timbres-Poste qui ne
 puisse dépasser avec le poids de la lettre celui de 4 grammes.
-Votre dépêche, menie de timbres représentant sa valeur au prix de cinquante
+Votre dépêche, munie de timbres représentant sa valeur au prix de cinquante
 centimes par mots, devra être adressée, comme cy derrière,
 à <ins>Clermont-Ferrand.</ins>
 
