--- a/docs/_posts/1870-08-04-4-aout-1870.md
+++ b/docs/_posts/1870-08-04-4-aout-1870.md
@@ -12,7 +12,7 @@ post_scriptum: P.S. Inclus une lettre de Madame et une de Mr Kunst.
 Monsieur A. Grünberg, Alexandrie
 
 Depuis le jour de votre départ, il ne s'est rien produit d'important au bureau.
-Les échéances des 30 juillet et 2 Ct ont été payées, à part la Tte de fs 8,000.
+Les échéances des 30 juillet et 2 C<sup>t</sup> ont été payées, à part la Tte de fs 8,000.
 qui n'avait pas été acceptée, et pour laquelle j'ai répondu que vous n'étiez
 pas d'accord.
 Demain, Mr Kunst me remet fs 51,000. pour les Acceptations des Traites
@@ -27,7 +27,7 @@ vendredi donc, je mettrai deux plis à la Poste, l'un pour le Vapeur Anglais, et
 l'autre par voie de Brindisi.
 
 Je profite, aujourd'hui, d'un bateau Français exceptionnel que Mr Kunst m'a dit
-devoir partir le 6 Ct de Marseille.
+devoir partir le 6 C<sup>t</sup> de Marseille.
 
 J'aime à penser, Monsieur, que votre traversée s'est opérée heureusement.
 
@@ -35,8 +35,8 @@ Vous savez, sans doute, déjà, que nos troupes ont pris l'offensive en se
 rendant à Sarrebruk et occupant toutes les bonnes positions qui dominent la
 vallée de la Sarre. Ce premier succès a raffermi la Bourse.
 
-Mr Jaeger a envoyé Ss.Cte.Ct. arrêté au 30 juin, il est d'accord avec les
-Livres.
+Mr Jaeger a envoyé S<sup>s</sup>.C<sup>te</sup>.C<sup>t</sup>. arrêté au 30 juin,
+il est d'accord avec les Livres.
 
 
 Veuillez agréer, Monsieur, l'expression de mes sentiments bien dévoués.
