--- a/docs/_posts/1870-08-05-5-aout-1870.md
+++ b/docs/_posts/1870-08-05-5-aout-1870.md
@@ -10,8 +10,8 @@ note: Par Vapeur Anglais
 
 Monsieur A. Grünberg, à Alexandrie
 
-J'ai l'honneur de vous confirmer ma lettre du 4 Ct, par Vapeur Français
-<ins>exceptionnel</ins>, qui a du quitter Marseille le 6 Ct. Je vous remets inclus copie
+J'ai l'honneur de vous confirmer ma lettre du 4 C<sup>t</sup>, par Vapeur Français
+<ins>exceptionnel</ins>, qui a du quitter Marseille le 6 C<sup>t</sup>. Je vous remets inclus copie
 de cette lettre qui en contenait une de Madame Grünberg, et une de Mr Kunst.
 
 Mr Kunst m'a remis, ce matin, fs 51,000. pour les échéances Jacques de ce
