--- a/docs/_posts/1870-08-12-12-aout-1870.md
+++ b/docs/_posts/1870-08-12-12-aout-1870.md
@@ -10,18 +10,18 @@ note: Par Vapeur Français
 
 Monsieur A. Grünberg, Alexandrie
 
-Je vous confirme, Monsieur, ma lettre du 8 Ct, l'une par Vapeur Français,
+Je vous confirme, Monsieur, ma lettre du 8 C<sup>t</sup>, l'une par Vapeur Français,
 dont inclus la copie.
 
 Mr L. Rau a reçu, ce matin, votre dépêche lui annonçant que la Maison
-Oppenheime aurait à lui compter la somme de fs 49,000. pour le Cte de Ss Ece
+Oppenheime aurait à lui compter la somme de fs 49,000. pour le C<sup>t</sup>e de Ss Ece
 Aly Pacha. Il s'est présenté chez Messrs Oppenheim & Cie qui n'avaient pas
 encore été avisés. Il se représentera demain.
 
-J'ai passé écriture à la date du 11 Ct, d'une somme de fs 90,000. encaissée
+J'ai passé écriture à la date du 11 C<sup>t</sup>, d'une somme de fs 90,000. encaissée
 par Mr D. Kunst, pour votre compte, au crédit de Ss Ece Aly Pacha.
 
-Je vous confirme une dépêche du 10 Ct que Mr Kunst m'a chargé de vous expédier,
+Je vous confirme une dépêche du 10 C<sup>t</sup> que Mr Kunst m'a chargé de vous expédier,
 elle est conçue en ces termes et adressée à Ismalun: 
 
 > Informez Grünberg 90,000 encaissés. Elisabeth et
@@ -31,7 +31,7 @@ elle est conçue en ces termes et adressée à Ismalun:
 C'est par un pur excès de précaution que Mr Kunst fait rentrer Madame Grünberg
 à Paris, ainsi que la lettre, incluse de Madame Grünberg vous le prouvera.
 
-Depuis ma lettre du 8 Ct, il ne s'est rien passé de bien grave sur les bords du
+Depuis ma lettre du 8 C<sup>t</sup>, il ne s'est rien passé de bien grave sur les bords du
 Rhin, mais on s'attend à tous moments à une grande bataille. Le Ministère est
 complètement changé, à part l'amiral Rigault de Genouilly qui seul a été
 conservé. Le Corps Legislatif a voté plusieurs lois d'appel d'hommes sous les
