--- a/docs/_posts/1870-08-31-31-aout-1870.md
+++ b/docs/_posts/1870-08-31-31-aout-1870.md
@@ -6,7 +6,7 @@ author: Louis Guillier
 recipient: Adolphe Grünberg
 destination: Munich
 post_scriptum: |
-  P.S. Je reçois à l'instant votre lettre datée du 28 Ct de Neufchatel, je me
+  P.S. Je reçois à l'instant votre lettre datée du 28 C<sup>t</sup> de Neufchatel, je me
   conformerai à son contenu. J'ai remis votre petit mot à Mr L. Rau n'ayant pas
   rencontré Mr Kunst chez lui.
 ---
@@ -14,7 +14,7 @@ post_scriptum: |
 Monsieur A. Grünberg, Munich
 
 
-Je vous confirme, Monsieur, ma lettre du 30 Ct.
+Je vous confirme, Monsieur, ma lettre du 30 C<sup>t</sup>.
 
 Les trains de vitesse étant, pour le moment, suspendus sur la ligne du Havre,
 Mr Kunst n'a pas fait enlever la Caisse de Valeurs et attend le moment
