--- a/docs/_posts/1870-09-09-9-septembre-1870.md
+++ b/docs/_posts/1870-09-09-9-septembre-1870.md
@@ -19,7 +19,7 @@ Monsieur A. Grünberg, Munich
 
 Une indisposition aussi grâve d'entrailles et nos déménagements de Neuilly dont
 on rase les maisons de la zone militaire, comme étant un point stratégique très
-important pour la défense, m'ont empêché de vous écrire depuis le 5 Ct date
+important pour la défense, m'ont empêché de vous écrire depuis le 5 C<sup>t</sup> date
 de ma dernière lettre. Nous sommes installés rue Royale depuis hier soir, il
 était temps car Neuilly depuis 3 jours est transformé en un véritable camp. Les
 débris de l'armée, qui ne se sont pas rendus, rentrent tous les jours dans
