--- a/docs/_posts/1870-09-10-10-septembre-1870.md
+++ b/docs/_posts/1870-09-10-10-septembre-1870.md
@@ -17,7 +17,7 @@ post_scriptum: |
 Monsieur A. Grünberg, Munich
 
 
-Je vous confirme ma lettre du 9 Ct.
+Je vous confirme ma lettre du 9 C<sup>t</sup>.
 
 Ma femme est allée ce matin à Croissy pour en rapporter les choses les plus
 précieuses, non pas que je craigne le pillage de l'ennemi, mais bien celui des
