--- a/docs/_posts/1870-09-11-11-septembre-1870.md
+++ b/docs/_posts/1870-09-11-11-septembre-1870.md
@@ -15,7 +15,7 @@ post_scriptum: |
 Monsieur A. Grünberg, Munich
 
 
-Je vous confirme mes lettres des 9 et 10 Ct.
+Je vous confirme mes lettres des 9 et 10 C<sup>t</sup>.
 
 J'attends une voiture de déménagement envoyée à Croissy ce matin pour ramener
 tout ce qui vous appartient, voir même 696 bles de vin qui, d'après un décret
@@ -26,7 +26,7 @@ restent à Chatou et à Croissy avec de mauvaises intentions.
 
 J'ai fait avec Mr Hernfeld parti pour New-York depuis deux jours, quelques
 affaires dont le chiffre a monté à fs 2,175.60. Il m'a remis fs 2,000 et
-a laissé les fs 175.60 en Cte, craignant de ne pas avoir assez pour le voyage.
+a laissé les fs 175.60 en C<sup>t</sup>e, craignant de ne pas avoir assez pour le voyage.
 Cette vente se compose de: 5 médaillons, une chaîne de gilet et 3 boutons de
 chemises en brillts que j'ai fait faire par Serrigny. Les bénéfices de cette
 affaire sont environ de 10%. Je me suis adressé à Mr Henlé pour les 3 brillts
