--- a/docs/_posts/1870-09-17-17-septembre-1870.md
+++ b/docs/_posts/1870-09-17-17-septembre-1870.md
@@ -10,7 +10,7 @@ destination: Munich
 Monsieur A. Grünberg, Munich
 
 
-Je vous confirme, Monsieur, ma lettre du 16 Ct. C'est demain le jour de l'envoi
+Je vous confirme, Monsieur, ma lettre du 16 C<sup>t</sup>. C'est demain le jour de l'envoi
 de la correspondance en Egypte. J'écrirai à Ss Ece pour l'aviser de l'envoi des
 deux journaux illustrés: la Guerre Illustrée et le Monde Illustré. J'écrirai
 aussi à Mr M. Ismalun pour lui envoyer pour lui envoyer: ma réponse à Mr
