--- a/docs/_posts/1870-09-18-18-septembre-1870.md
+++ b/docs/_posts/1870-09-18-18-septembre-1870.md
@@ -11,7 +11,7 @@ post_scriptum: T.S.V.P
 Monsieur A. Grünberg, Munich
 
 
-Je vous confirme ma lettre du 17 Ct.
+Je vous confirme ma lettre du 17 C<sup>t</sup>.
 
 Il est quatre heures de l'après midi, je viens de recevoir quelques lignes
 de vous, mon cher Monsieur, vous ne sauriez vous imaginer tout le plaisir que
