--- a/docs/_posts/1870-09-20-20-septembre-1870.md
+++ b/docs/_posts/1870-09-20-20-septembre-1870.md
@@ -10,13 +10,13 @@ destination: Munich
 Monsieur A. Grünberg, Munich
 
 
-Je vous confirme, mon Cher Monsieur, ma lettre du 19 Ct.
+Je vous confirme, mon Cher Monsieur, ma lettre du 19 C<sup>t</sup>.
 
 Les engagements qui ont eu lieu hier se sont passés au dela de la portée des
 Forts, je ne puis rien vous en dire, les détails manquent. Il est fortement
 question en ce moment d'un armistice proposé au Roi de Prusse, pour pouvoir
 constituer un gouvernement régulier, les élections pour la constituante auront
-lieu le 28 Ct. Cette proposition paraît devoir aboutir.
+lieu le 28 C<sup>t</sup>. Cette proposition paraît devoir aboutir.
 
 Je continuerai à vous écrire chaque jour pour vous donner signe de vie, et mes
 lettres pour arriveront comme elle le peuvent, la Poste devant saisir les
