--- a/docs/_posts/1870-09-21-21-septembre-1870.md
+++ b/docs/_posts/1870-09-21-21-septembre-1870.md
@@ -13,7 +13,7 @@ post_scriptum: |
 Monsieur A. Grünberg, Munich
 
 
-Je vous confirme, mon Cher Monsieur, ma lettre du 20 Ct.
+Je vous confirme, mon Cher Monsieur, ma lettre du 20 C<sup>t</sup>.
 
 Rien de nouveau dans la situation, on ne dit pas que le canon ait grondé
 aujourd'hui. Rien non plus n'a transpiré sur la mission de Jules Ferri touchant
