--- a/docs/_posts/1870-09-22-22-septembre-1870.md
+++ b/docs/_posts/1870-09-22-22-septembre-1870.md
@@ -12,7 +12,7 @@ Monsieur A. Grünberg, Munich
 
 
 Je vous confirme, Monsieur, toutes mes lettres de chaque jour sans interruption
-à partir du 10 Ct.  Votre estimée du 13 Ct m'avisait de la réception de ma
+à partir du 10 C<sup>t</sup>.  Votre estimée du 13 C<sup>t</sup> m'avisait de la réception de ma
 lettre du 10, vous recevrez donc toutes les autres plus ou moins rapidement
 suivant les circonstances du moment.
 
