--- a/docs/_posts/1870-09-23-23-septembre-1870.md
+++ b/docs/_posts/1870-09-23-23-septembre-1870.md
@@ -11,7 +11,7 @@ post_scriptum: P.S. Ma femme vous envoie ses compliments empressés ainsi qu'à 
 Monsieur A. Grünberg, Munich
 
 
-Je vous confirme, Monsieur, ma lettre du 22 Ct.
+Je vous confirme, Monsieur, ma lettre du 22 C<sup>t</sup>.
 
 La Poste ayant eu plusieurs courriers à cheval entravés dans leur marche en
 emportant les lettres de Paris, a organisé un service de ballons, le premier
