--- a/docs/_posts/1870-09-25-25-septembre-1870.md
+++ b/docs/_posts/1870-09-25-25-septembre-1870.md
@@ -17,7 +17,7 @@ post_scriptum: |
 
 Monsieur A. Grünberg, Munich.
 
-Je vous confirme, Monsieur, ma lettre du 23 Ct. et celle de ma femme du 24 Ct.
+Je vous confirme, Monsieur, ma lettre du 23 C<sup>t</sup>. et celle de ma femme du 24 C<sup>t</sup>.
 Après 28 heures de garde aux Fortifications je viens de rentrer à Midi. Nous
 avons eu deux alertes pendant la nuit, elles peuvent offrir quelques charmes
 à ceux qui sont militaires par état, mais je assure que pour nous, soldats
