--- a/docs/_posts/1870-09-26-26-septembre-1870.md
+++ b/docs/_posts/1870-09-26-26-septembre-1870.md
@@ -10,7 +10,7 @@ destination: Munich
 Monsieur A. Grünberg, Munich
 
 
-Je vous confirme, Monsieur, ma lettre du 25 Ct.
+Je vous confirme, Monsieur, ma lettre du 25 C<sup>t</sup>.
 
 Des Inspecteurs attachés à la commission de la défense sont venus ce matin nous
 prier de prendre toutes les précautions nécessaires pour parer autant que
