--- a/docs/_posts/1870-09-27-27-septembre-1870.md
+++ b/docs/_posts/1870-09-27-27-septembre-1870.md
@@ -15,7 +15,7 @@ post_scriptum: |
 Monsieur A. Grünberg, Munich
 
 
-Je vous confirme, Monsieur, ma lettre du 26 Ct.
+Je vous confirme, Monsieur, ma lettre du 26 C<sup>t</sup>.
 
 Je suis allé voir Monsieur Rau, ce matin, il va bien et, comme tout le monde,
 monte ses gardes. Il a appris avec plaisir que la maison de Croissy avait été
