--- a/docs/_posts/1870-09-28-28-septembre-1870.md
+++ b/docs/_posts/1870-09-28-28-septembre-1870.md
@@ -11,7 +11,7 @@ post_scriptum: P.S. Gaston envoie ses amitiés à Emilie et Paul.
 Monsieur A. Grünberg, Munich
 
 
-Je vous confirme, Monsieur, ma lettre du 27 Ct.
+Je vous confirme, Monsieur, ma lettre du 27 C<sup>t</sup>.
 
 A partir de ce jour, je suis obligé de me conformer à deux Décrets qui viennent
 d'être rendus par le Gouvernement de la défense nationale, pour faciliter la
