--- a/docs/_posts/1870-09-29-29-septembre-1870.md
+++ b/docs/_posts/1870-09-29-29-septembre-1870.md
@@ -10,7 +10,7 @@ destination: Munich
 Monsieur A. Grünberg, Munich
 
 
-Je vous confirme, Monsieur, ma lettre du 28 Ct qui a dû partir ce matin par un
+Je vous confirme, Monsieur, ma lettre du 28 C<sup>t</sup> qui a dû partir ce matin par un
 Ballon monté qui nous a paru se diriger vers le Nord. Il y a eu, presqu'au même
 moment, le départ d'un Ballon libre comportant les cartes-postes.
 
