--- a/docs/_posts/1870-09-30-30-septembre-1870.md
+++ b/docs/_posts/1870-09-30-30-septembre-1870.md
@@ -21,7 +21,7 @@ Je me suis présenté au Bureau de Mr Schindler pour encaisser l'effet de fs
 1,000. Il m'a été répondu par un Monsieur qui s'est dit associé avec lui, que
 Mr Schindler ne lui avait laissé aucun fond pour faire face à cette échéance.
 
-Les 4 mobiles qui étaient entrés chez vous le 13 Ct, ont quitté la maison
+Les 4 mobiles qui étaient entrés chez vous le 13 C<sup>t</sup>, ont quitté la maison
 aujourd'hui. Je sais, auprès de vous, l'interprète de leurs vifs remerciements
 pour la bonne réception qui leur a été faite. J'aime bien à penser que vous
 n'en aurez pas d'autres. Plus nous allons, plus la vie est chère, ma femme
