--- a/docs/_posts/1870-10-04-4-octobre-1870.md
+++ b/docs/_posts/1870-10-04-4-octobre-1870.md
@@ -10,7 +10,7 @@ destination: Munich
 Monsieur A. Grünberg, Munich
 
 
-Je vous confirme, Monsieur, ma lettre du 2 Ct et celle de ma femme du
+Je vous confirme, Monsieur, ma lettre du 2 C<sup>t</sup> et celle de ma femme du
 3 à l'adresse de Madame Grünberg.
 
 J'ai descendu ma garde à Midi, à part une fausse alerte qui nous a arrachés de
