--- a/docs/_posts/1870-10-05-5-octobre-1870.md
+++ b/docs/_posts/1870-10-05-5-octobre-1870.md
@@ -10,7 +10,7 @@ destination: Munich
 Monsieur A. Grünberg, Munich
 
 
-Je vous confirme, Monsieur, ma lettre du 4 Ct.
+Je vous confirme, Monsieur, ma lettre du 4 C<sup>t</sup>.
 
 Depuis 2 ou 3 jours le temps est tellement calme que les Ballons du Service des
 Postes ne peuvent partir.
