--- a/docs/_posts/1870-10-07-7-octobre-1870.md
+++ b/docs/_posts/1870-10-07-7-octobre-1870.md
@@ -14,7 +14,7 @@ post_scriptum: |
 Monsieur A. Grünberg, Munich
 
 
-Je vous confirme, Monsieur, ma lettre du 5 Ct et celle de ma femme du 6 Ct.
+Je vous confirme, Monsieur, ma lettre du 5 C<sup>t</sup> et celle de ma femme du 6 C<sup>t</sup>.
 
 Nous avons de bonnes nouvelles de Tours, la Province émue de la répose faite
 à Mr Jules Favre, se soulève en masse et marche à la défense de Paris.
