--- a/docs/_posts/1870-10-09-9-octobre-1870.md
+++ b/docs/_posts/1870-10-09-9-octobre-1870.md
@@ -11,7 +11,7 @@ post_scriptum: P.S. J'ai [illisible]
 Monsieur A. Grünberg, Munich
 
 
-Je vous confirme, Monsieur, ma lettre du 8 Ct.
+Je vous confirme, Monsieur, ma lettre du 8 C<sup>t</sup>.
 
 Une bonne mesure vient d'être prise par le Gouvernement de la défense
 Nationale, malgré l'approvisionnement énorme fait pour 2 mois au moins, un
