--- a/docs/_posts/1870-10-10-10-octobre-1870.md
+++ b/docs/_posts/1870-10-10-10-octobre-1870.md
@@ -16,9 +16,9 @@ post_scriptum: |
 Monsieur A. Grünberg, Munich
 
 
-Je vous confirme, Monsieur, ma lettre du 9 Ct.
+Je vous confirme, Monsieur, ma lettre du 9 C<sup>t</sup>.
 
-La journée du 8 Ct a été un peu tumultueuse dans Paris. Quelques meneurs ont
+La journée du 8 C<sup>t</sup> a été un peu tumultueuse dans Paris. Quelques meneurs ont
 voulu faire une manifestation intempestive et se sont dirigés armés sur la
 place de l'Hôtel de ville, en demandant au Gouvernement le rétablissement de la
 Commune. Il a suffi de quelques Bataillons de la Garde-Nationale qui avaient
