--- a/docs/_posts/1870-10-12-12-octobre-1870.md
+++ b/docs/_posts/1870-10-12-12-octobre-1870.md
@@ -17,7 +17,7 @@ post_scriptum: |
 Monsieur A. Grünberg, Munich
 
 
-Je vous confirme, Monsieur, ma lettre du 10 Ct et celle de ma femme du 11 Ct,
+Je vous confirme, Monsieur, ma lettre du 10 C<sup>t</sup> et celle de ma femme du 11 C<sup>t</sup>,
 ayant été sous les armes toute cette journée, et ayant bien recommandé à Clara
 de me remplacer, afin qu'il ne se produise aucune lacune dans l'envoi des
 nouvelles de chaque jour. Les manifestations que l'on craignait, <ins
