--- a/docs/_posts/1870-10-13-13-octobre-1870.md
+++ b/docs/_posts/1870-10-13-13-octobre-1870.md
@@ -14,7 +14,7 @@ post_scriptum: |
 Monsieur A. Grünberg, Munich
 
 
-Je vous confirme, Monsieur, ma lettre du 12 Ct.
+Je vous confirme, Monsieur, ma lettre du 12 C<sup>t</sup>.
 
 A en croire certains bruits de source non officielle, c'était aujourd'hui que
 le bombardement devait commencer, et on a été tout étonné ce matin de ne pas
