--- a/docs/_posts/1870-10-16-16-octobre-1870.md
+++ b/docs/_posts/1870-10-16-16-octobre-1870.md
@@ -10,7 +10,7 @@ destination: Munich
 Monsieur A. Grünberg, Munich
 
 
-Je vous confirme, Monsieur, ma lettre du 15 Ct.
+Je vous confirme, Monsieur, ma lettre du 15 C<sup>t</sup>.
 
 
 L'événement émotionnant de la journée est la cérémonie des funérailles à la
