--- a/docs/_posts/1870-10-18-18-octobre-1870.md
+++ b/docs/_posts/1870-10-18-18-octobre-1870.md
@@ -10,7 +10,7 @@ destination: Munich
 Monsieur A. Grünberg, Munich
 
 
-Je vous confirme, Monsieur, ma lettre du 17 Ct.
+Je vous confirme, Monsieur, ma lettre du 17 C<sup>t</sup>.
 
 Le service d'hier n'était qu'une question d'exercices d'un ordre un peu plus
 compliqué que d'habitude, on nous a entr'autres fait faire des marches et
@@ -22,7 +22,7 @@ au 34me jour du siège, et il faut bien espérer que dans la première quinzaine
 de Décembre, les événements qui vont se passer d'ici là, amèneront notre
 délivrance.
 
-Calme plat depuis les engagements du 13 Ct à part quelques escarmouches
+Calme plat depuis les engagements du 13 C<sup>t</sup> à part quelques escarmouches
 insignifiantes, et la destruction chaque jour par nos forts des ouvrages de
 l'ennemi.
 
