--- a/docs/_posts/1870-10-19-19-octobre-1870.md
+++ b/docs/_posts/1870-10-19-19-octobre-1870.md
@@ -10,7 +10,7 @@ destination: Munich
 Monsieur A. Grünberg, Munich
 
 
-Je vous confirme, Monsieur, ma lettre du 18 Ct.
+Je vous confirme, Monsieur, ma lettre du 18 C<sup>t</sup>.
 
 Ayant appris que 3 Boucheries de Vincennes délivraient de la viande, nous nous
 y sommes rendus ce matin à l'ouverture des Ponts-levi et après une heure et
