--- a/docs/_posts/1870-10-25-25-octobre-1870.md
+++ b/docs/_posts/1870-10-25-25-octobre-1870.md
@@ -10,7 +10,7 @@ destination: Munich
 Monsieur A. Grünberg, Munich
 
 
-Je vous confirme, Monsieur, ma lettre du 24 Ct.
+Je vous confirme, Monsieur, ma lettre du 24 C<sup>t</sup>.
 
 Encore une ville vaillante qui vient d'inscrire son nom au Livre d'or de
 l'histoire. Châteaudun ville <ins>ouverte</ins> du dept de l'Eure de 6,700
