--- a/docs/_posts/1870-10-26-26-octobre-1870.md
+++ b/docs/_posts/1870-10-26-26-octobre-1870.md
@@ -10,10 +10,10 @@ destination: Munich
 Monsieur A. Grünberg, Munich
 
 
-Je vous confirme, Monsieur, ma lettre du 25 Ct.
+Je vous confirme, Monsieur, ma lettre du 25 C<sup>t</sup>.
 
 Je vous parlais hier d'une aurore boréale que l'on avait vue dans la soirée du
-24 Ct. Ce phénomène s'est reproduit hier soir d'une manière plus accentuée
+24 C<sup>t</sup>. Ce phénomène s'est reproduit hier soir d'une manière plus accentuée
 encore que la veille. Nous en avons admiré toutes les phases qui produisent des
 effets merveilleux de lumière blanche, verte et rouge. à un certain moment, le
 vert tirant un peu sur le bleu a représenté exactement les nuances nationales,
