--- a/docs/_posts/1870-10-29-29-octobre-1870.md
+++ b/docs/_posts/1870-10-29-29-octobre-1870.md
@@ -10,7 +10,7 @@ destination: Munich
 Monsieur A. Grünberg, Munich
 
 
-Je vous confirme, Monsieur, ma lettre du 28 Ct.
+Je vous confirme, Monsieur, ma lettre du 28 C<sup>t</sup>.
 
 Nous venons d'avoir un assez beau succès, nous occupons le Bourget point
 stratégique d'une grande importance que l'ennemi a essayé, sans succès, de
