--- a/docs/_posts/1870-10-30-30-octobre-1870.md
+++ b/docs/_posts/1870-10-30-30-octobre-1870.md
@@ -13,7 +13,7 @@ post_scriptum: |
 Monsieur A. Grünberg, Munich
 
 
-Je vous confirme, Monsieur, ma lettre du 29 Ct.
+Je vous confirme, Monsieur, ma lettre du 29 C<sup>t</sup>.
 
 C'est aujourd'hui, Dimanche, repos pour tout le monde. Nous venons cependant de
 voir passer, rue Royale, une batterie d'artillerie dans laquelle figurent
