--- a/docs/_posts/1870-11-04-4-novembre-1870.md
+++ b/docs/_posts/1870-11-04-4-novembre-1870.md
@@ -10,7 +10,7 @@ destination: Munich
 Monsieur A. Grünberg, Munich
 
 
-Je vous confirme, Monsieur, ma lettre du 3 Ct.
+Je vous confirme, Monsieur, ma lettre du 3 C<sup>t</sup>.
 
 Les résultats du vote d'hier sont:
 
