--- a/docs/_posts/1870-11-05-5-novembre-1870.md
+++ b/docs/_posts/1870-11-05-5-novembre-1870.md
@@ -10,7 +10,7 @@ destination: Munich
 Monsieur A. Grünberg, Munich
 
 
-Je vous confirme, Monsieur, ma lettre du 4 Ct.
+Je vous confirme, Monsieur, ma lettre du 4 C<sup>t</sup>.
 
 Le vote de l'armée étant connu aujourd'hui, voici le résultat définitif, sauf
 cependant quelques communes qui n'ont pas encore transmis leurs votes:
