--- a/docs/_posts/1870-11-06-6-novembre-1870.md
+++ b/docs/_posts/1870-11-06-6-novembre-1870.md
@@ -10,7 +10,7 @@ destination: Munich
 Monsieur A. Grünberg, Munich
 
 
-Je vous confirme, Monsieur, ma lettre du 5 Ct.
+Je vous confirme, Monsieur, ma lettre du 5 C<sup>t</sup>.
 
 Le bruit court aujourd'hui que la question d'armistice n'est pas encore
 complètement vidée. Les puissances étrangères, malgré les prétentions
