--- a/docs/_posts/1870-11-07-7-novembre-1870.md
+++ b/docs/_posts/1870-11-07-7-novembre-1870.md
@@ -10,7 +10,7 @@ destination: Munich
 Monsieur A. Grünberg, Munich
 
 
-Je vous confirme, Monsieur, ma lettre du 6 Ct.
+Je vous confirme, Monsieur, ma lettre du 6 C<sup>t</sup>.
 
 Les négociations se continuent en faveur de l'armistice et on commence
 à reprendre espoir qu'elles aboutiront. La Bourse a acceuilli ces bruits par
