--- a/docs/_posts/1870-11-09-9-novembre-1870.md
+++ b/docs/_posts/1870-11-09-9-novembre-1870.md
@@ -10,7 +10,7 @@ destination: Munich
 Monsieur A. Grünberg, Munich
 
 
-Je vous confirme, Monsieur, ma lettre du 8 Ct.
+Je vous confirme, Monsieur, ma lettre du 8 C<sup>t</sup>.
 
 Aujourd'hui, a paru au Journal officiel le décret relatif à la mobilisation de
 la Garde-Nationale.
