--- a/docs/_posts/1870-11-15-15-novembre-1870.md
+++ b/docs/_posts/1870-11-15-15-novembre-1870.md
@@ -10,7 +10,7 @@ destination: Munich
 Monsieur A. Grünberg, Munich
 
 
-Je vous confirme, Monsieur, la lettre du 13 Ct et celle du 14 adressée par ma
+Je vous confirme, Monsieur, la lettre du 13 C<sup>t</sup> et celle du 14 adressée par ma
 femme à Madame Grünberg pendant ma garde aux remparts.
 
 La 3me Cie du 1er Bataillon, dont je faits partie, ayant été un peu
