--- a/docs/_posts/1870-11-17-17-novembre-1870.md
+++ b/docs/_posts/1870-11-17-17-novembre-1870.md
@@ -10,10 +10,10 @@ destination: Munich
 Monsieur A. Grünberg, Munich
 
 
-Je vous confirme, Monsieur, ma lettre du 16 Ct.
+Je vous confirme, Monsieur, ma lettre du 16 C<sup>t</sup>.
 
 Renseignements pris à l'Administration des Postes, l'idée ingénieuse dont vous
-entretenait ma lettre du 13 Ct n'est applicable que pour la France.
+entretenait ma lettre du 13 C<sup>t</sup> n'est applicable que pour la France.
 Il ne faut pas, je trouve, de grands efforts d'imagination pour l'appliquer
 à l'Etranger, et permettez moi, animé du désir que nous avons de recevoir de
 vous nouvelles, de tenter un essai qui peut parfaitement réussir.
