--- a/docs/_posts/1870-11-18-18-novembre-1870.md
+++ b/docs/_posts/1870-11-18-18-novembre-1870.md
@@ -15,7 +15,7 @@ post_scriptum: |
 Monsieur A. Grünberg, Munich
 
 
-Je vous confirme, Monsieur, ma lettre du 17 Ct renfermant une dépêche-réponse.
+Je vous confirme, Monsieur, ma lettre du 17 C<sup>t</sup> renfermant une dépêche-réponse.
 
 Je vous envoie aujourd'hui des Timbres-Poste pour la somme de <ins>fs 10.</ins>
 prix de la dépêche de 20 mots que j'espère, vous voudrez bien risquer. Si je
