--- a/docs/_posts/1870-11-19-19-novembre-1870.md
+++ b/docs/_posts/1870-11-19-19-novembre-1870.md
@@ -11,9 +11,9 @@ post_scriptum: P.S. Etant de garde aux remparts demain, ma femme ...
 Monsieur A. Grünberg, Munich
 
 
-Je vous confirme, Monsieur, ma lettre du 18 Ct.
+Je vous confirme, Monsieur, ma lettre du 18 C<sup>t</sup>.
 
-D'après une dépêche de Gambetta à Jules Favre, datée du 13 Ct, l'ennemi aurait
+D'après une dépêche de Gambetta à Jules Favre, datée du 13 C<sup>t</sup>, l'ennemi aurait
 évacué Dijon complètement et l'administration préfectorale y aurait repris son
 cours.
 Cette nouvelle rassurante me laisse encore bien des inquiétudes car aucun
@@ -23,7 +23,7 @@ La première ascension de nuit pour les ballons a eu lieu la nuit dernière, le
 Ballon Gal Ulric s'est enlevé à une heure du matin par un temps calme, mais un
 brouillard épais.
 Il était porteur de 300 kilog. de dépêches et j'espère bien que mes deux
-lettres importantes des 17 et 18 Ct étaient du nombre.
+lettres importantes des 17 et 18 C<sup>t</sup> étaient du nombre.
 Puisse un bon vent lui être favorable, car de son heureux atterissement dépend,
 pour nous, la réception de vos chères nouvelles.
 Quelle reconnaissance ne devons-nous pas à ces harids nautoniers, qui se
