--- a/docs/_posts/1870-11-29-29-novembre-1870.md
+++ b/docs/_posts/1870-11-29-29-novembre-1870.md
@@ -10,7 +10,7 @@ destination: Munich
 Monsieur A. Grünberg, Munich
 
 
-Je vous confirme, Monsieur, ma lettre du 27 Ct et celle de ma femme du 28 Ct.
+Je vous confirme, Monsieur, ma lettre du 27 C<sup>t</sup> et celle de ma femme du 28 C<sup>t</sup>.
 
 A une heure du matin, la nuit dernière, Les forts de Montrouge, de Vanves et
 d'Issy, ainsi que la Redoute des Htes Bruyères ont commencé leurs feux pour
