--- a/docs/_posts/1870-11-30-30-novembre-1870.md
+++ b/docs/_posts/1870-11-30-30-novembre-1870.md
@@ -10,7 +10,7 @@ destination: Munich
 Monsieur A. Grünberg, Munich
 
 
-Je vous confirme, Monsieur, ma lettre du 29 Ct.
+Je vous confirme, Monsieur, ma lettre du 29 C<sup>t</sup>.
 
 Les opérations commencées, hier matin, se poursuivent sans relache,
 et un Bulletin du Gouvernement, affiché hier soir à huit heures dans tout
