--- a/docs/_posts/1870-12-03-3-decembre-1870.md
+++ b/docs/_posts/1870-12-03-3-decembre-1870.md
@@ -11,7 +11,7 @@ post_scriptum: Gaston envoie ses meilleures amitiés à Emilie et Paul.
 Monsieur A. Grünberg, Munich
 
 
-Je vous confirme, Monsieur, ma lettre du 2 Ct.
+Je vous confirme, Monsieur, ma lettre du 2 C<sup>t</sup>.
 
 La Journée du 2 Décembre/70 comptera parmis les plus glorieuses de l'histoire
 militaire de la France, car de nouveaux succès sont signalés sous les murs de
