--- a/docs/_posts/1870-12-05-5-decembre-1870.md
+++ b/docs/_posts/1870-12-05-5-decembre-1870.md
@@ -10,7 +10,7 @@ destination: Munich
 Monsieur A. Grünberg, Munich
 
 
-Je vous confirme, Monsieur, ma lettre du 4 Ct.
+Je vous confirme, Monsieur, ma lettre du 4 C<sup>t</sup>.
 
 Après avoir vécu toute une semaine de viandes salées, nous voici revenus aux
 viandes fraiches, nous sommes traités en commensaux de Lucullus, car ce matin
