--- a/docs/_posts/1870-07-13-13-juillet-1870.md
+++ b/docs/_posts/1870-07-13-13-juillet-1870.md
@@ -9,10 +9,10 @@ destination: Heidelberg
 
 Monsieur A. Grünberg, Heidelberg
 
-J'ai l'honneur de vous confirmer ma lettre du 12 Ct. J'ai appris aujourd'hui
+J'ai l'honneur de vous confirmer ma lettre du 12 C<sup>t</sup>. J'ai appris aujourd'hui
 par Mr Dugied, que les enfants de son Excellence étaient arrivés à Dijon
 seulement pour le dernier bateau et que Ss. Ece ne partirait pour la France,
-que par le bateau du 29 Ct., s'arrêtant à Dijon deux ou trois jours, avant de
+que par le bateau du 29 C<sup>t</sup>., s'arrêtant à Dijon deux ou trois jours, avant de
 gagner Paris.
 Il n'y aurait que le cas de guerre qui pourrait faire renoncer à Ss Ece de
 venir en France.
