--- a/docs/_posts/1870-08-08-8-aout-1870.md
+++ b/docs/_posts/1870-08-08-8-aout-1870.md
@@ -13,13 +13,13 @@ post_scriptum: |
 
 Monsieur A. Grünberg, Alexandrie
 
-Je vous confirme, Monsieur, mes deux lettres du 5 Ct, l'une par le Vapeur
+Je vous confirme, Monsieur, mes deux lettres du 5 C<sup>t</sup>, l'une par le Vapeur
 Anglais et l'autre par la voie de Brindisi; inclus la copie de cette dernière
 lettre.
 
-Mr Kunst m'a fait part, ce matin, de votre dépêche du 6 Ct annonçant votre
+Mr Kunst m'a fait part, ce matin, de votre dépêche du 6 C<sup>t</sup> annonçant votre
 heureuse arrivée et la réception du télégramme qu'il m'avait chargé de vous
-expédier le 5 Ct.
+expédier le 5 C<sup>t</sup>.
 
 Rien à vous signaler: si ce n'est que tout est absorbé par l'anxieuse attente
 de ce qui se passe sur les bords du Rhin.
