--- a/docs/_posts/1870-09-05-5-septembre-1870.md
+++ b/docs/_posts/1870-09-05-5-septembre-1870.md
@@ -12,12 +12,12 @@ Monsieur A. Grünberg, Munich
 
 
 Je vous confirme, Monsieur, toutes mes lettres successives datées du 30 Août
-écoulé. Je ne vous ai pas écrit hier dimanche 4 Ct, journée à jamais célèbre
+écoulé. Je ne vous ai pas écrit hier dimanche 4 C<sup>t</sup>, journée à jamais célèbre
 pour la manière dont s'est opérée la déchéance de l'Empire et la proclamation
 de la République.
 
 Vous savez, sans doute, beaucoup plustot que nous, les nouvelles du théatre
-de la Guerre, les dernières que vous avons apprises le 3 Ct dans la soirée,
+de la Guerre, les dernières que vous avons apprises le 3 C<sup>t</sup> dans la soirée,
 ont déterminé les actes de la journée du 3. J'ai pleuré comme un enfant en
 voyant l'héroisme de notre brave armée de briser dans une place forte où ne se
 trouvait plus un canon pour protéger sa retraite, toujours accablés par le
