--- a/docs/_posts/1870-09-15-15-septembre-1870.md
+++ b/docs/_posts/1870-09-15-15-septembre-1870.md
@@ -10,10 +10,10 @@ destination: Munich
 
 Monsieur A. Grünberg, Munich
 
-Je vous confirme, Monsieur, ma lettre du 13 Ct et celle de ma femme du 14 Ct,
+Je vous confirme, Monsieur, ma lettre du 13 C<sup>t</sup> et celle de ma femme du 14 C<sup>t</sup>,
 ayant été de garde aux fortifications pendant 24 heures. Il est quatre heures
 de l'après-midi; je viens de rentrer et je m'empresse de vous adresser ces
-quelques lignes à la hâte. Je vous disais dans ma lettre du 12 Ct que le
+quelques lignes à la hâte. Je vous disais dans ma lettre du 12 C<sup>t</sup> que le
 service des gardes ne se renouvellerait guère que 2 ou 3 fois par mois, mais
 nous sommes arrivés à un moment où ce service devient très pénible, nous allons
 être appelés maintenant au moins 2 fois par semaine si ce n'est pas 3 fois.
