--- a/docs/_posts/1870-10-08-8-octobre-1870.md
+++ b/docs/_posts/1870-10-08-8-octobre-1870.md
@@ -10,7 +10,7 @@ destination: Munich
 Monsieur A. Grünberg, Munich
 
 
-Je vous confirme, Monsieur, ma lettre du 7 Ct.
+Je vous confirme, Monsieur, ma lettre du 7 C<sup>t</sup>.
 
 
 On dit que les divers engagements d'hier nous ont été favorables, l'ennemi est
