--- a/docs/_posts/1870-11-08-8-novembre-1870.md
+++ b/docs/_posts/1870-11-08-8-novembre-1870.md
@@ -10,7 +10,7 @@ destination: Munich
 Monsieur A. Grünberg, Munich
 
 
-Je vous confirme, Monsieur, ma lettre du 7 Ct.
+Je vous confirme, Monsieur, ma lettre du 7 C<sup>t</sup>.
 
 Les dernières espérances, sur le succès de l'armistice, s'évanouissent, la
 circulaire de Jules Favre aux agents diplomatiques, parue ce matin au Journal
