--- a/docs/_posts/1870-11-12-12-novembre-1870.md
+++ b/docs/_posts/1870-11-12-12-novembre-1870.md
@@ -10,7 +10,7 @@ destination: Munich
 Monsieur A. Grünberg, Munich
 
 
-Je vous confirme, Monsieur, ma lettre du 11 Ct.
+Je vous confirme, Monsieur, ma lettre du 11 C<sup>t</sup>.
 
 Rien n'a transpiré encore sur l'issue des négociations entamées. On nous
 balance entre l'armistice et la paix, j'ai bien peur que tout cela finisse par
