--- a/docs/_posts/1870-11-13-13-novembre-1870.md
+++ b/docs/_posts/1870-11-13-13-novembre-1870.md
@@ -10,7 +10,7 @@ destination: Munich
 Monsieur A. Grünberg, Munich
 
 
-Je vous confirme, Monsieur, ma lettre du 12 Ct.
+Je vous confirme, Monsieur, ma lettre du 12 C<sup>t</sup>.
 
 
 Toujours même silence sur le résultat des négociations entamées.
