--- a/docs/_posts/1870-08-12-12-aout-1870.md
+++ b/docs/_posts/1870-08-12-12-aout-1870.md
@@ -13,22 +13,22 @@ Monsieur A. Grünberg, Alexandrie
 Je vous confirme, Monsieur, ma lettre du 8 C<sup>t</sup>, l'une par Vapeur Français,
 dont inclus la copie.
 
-Mr L. Rau a reçu, ce matin, votre dépêche lui annonçant que la Maison
+M<sup>r</sup> L. Rau a reçu, ce matin, votre dépêche lui annonçant que la Maison
 Oppenheime aurait à lui compter la somme de fs 49,000. pour le C<sup>t</sup>e de Ss Ece
 Aly Pacha. Il s'est présenté chez Messrs Oppenheim & Cie qui n'avaient pas
 encore été avisés. Il se représentera demain.
 
 J'ai passé écriture à la date du 11 C<sup>t</sup>, d'une somme de fs 90,000. encaissée
-par Mr D. Kunst, pour votre compte, au crédit de Ss Ece Aly Pacha.
+par M<sup>r</sup> D. Kunst, pour votre compte, au crédit de Ss Ece Aly Pacha.
 
-Je vous confirme une dépêche du 10 C<sup>t</sup> que Mr Kunst m'a chargé de vous expédier,
+Je vous confirme une dépêche du 10 C<sup>t</sup> que M<sup>r</sup> Kunst m'a chargé de vous expédier,
 elle est conçue en ces termes et adressée à Ismalun: 
 
 > Informez Grünberg 90,000 encaissés. Elisabeth et
 > enfants bien portants revenus et installés à Paris
 > par prudence.
 
-C'est par un pur excès de précaution que Mr Kunst fait rentrer Madame Grünberg
+C'est par un pur excès de précaution que M<sup>r</sup> Kunst fait rentrer Madame Grünberg
 à Paris, ainsi que la lettre, incluse de Madame Grünberg vous le prouvera.
 
 Depuis ma lettre du 8 C<sup>t</sup>, il ne s'est rien passé de bien grave sur les bords du
@@ -42,7 +42,7 @@ durée. Dans la scéance de ce jour, doit être présenté un projet de loi pour
 prorogation des trente jours des échéances des effets de commerce payables
 depuis le 11 Août jusqu'au 20 Septembre de manière à ce que les effets échus le
 11 Août, ne soient payables que le 11 Septembre prochain, et ainsi de suite.
-C'est dumoins l'article 1er d'un projet de loi présenté, par Mr Le Ministre du
+C'est dumoins l'article 1er d'un projet de loi présenté, par M<sup>r</sup> Le Ministre du
 Commerce dans la séance d'hier et pour lequel l'urgence a été déclarée. Quant
 à l'armement des Forts qui entourent Paris, et à la transformation de toutes
 les barières de la Capital en Ponts-Levis et Poternes, c'est excès de
@@ -50,7 +50,7 @@ précaution qui ne servira à rien, car pour que les Prussiens viennent sous les
 murs de Paris, il faudrait qu'ils aient renversé un rempart de deux ou trois
 millions de poitrines humaines........
 
-Mr Kunst m'a remis aujourd'hui fs 15,000. pour l'échéance de demain,
+M<sup>r</sup> Kunst m'a remis aujourd'hui fs 15,000. pour l'échéance de demain,
 acceptations de 5 Ttes Arnold Grünberg.
 
 Inclus une lettre de Madame Grünberg, la copie de celle-ci vous arrivera par
