--- a/docs/_posts/1870-09-10-10-septembre-1870.md
+++ b/docs/_posts/1870-09-10-10-septembre-1870.md
@@ -7,7 +7,7 @@ recipient: Adolphe Grünberg
 destination: Munich
 post_scriptum: |
   Ma femme n'étant pas de retour, ne pourra écrire aujourd'hui à Madame Grünberg.
-  Vous allez avoir sans-doute 3 Mobiles à loger, d'accord avec Mr Louis Rau, je
+  Vous allez avoir sans-doute 3 Mobiles à loger, d'accord avec M<sup>r</sup> Louis Rau, je
   vais les installer dans la chambre de bonnes du cinquième étage.-
   
   A tout instant il arrive des troupes dans Paris. La défense à Neuilly prend des
