--- a/docs/_posts/1870-10-20-20-octobre-1870.md
+++ b/docs/_posts/1870-10-20-20-octobre-1870.md
@@ -23,7 +23,7 @@ choses qui paraissent impossibles au premier abord, que je m'attends à faire le
 coup de feu un de ces jours. Espérons cependant que les Forts nous éviteront
 d'arriver à cette extrémité.
 
-J'ai vu Mr L. Rau ce matin, sa santé est parfaite et il paraît satisfait des
+J'ai vu M<sup>r</sup> L. Rau ce matin, sa santé est parfaite et il paraît satisfait des
 nouvelles.
 
 Agréez, Monsieur, l'expression de mes sentiments dévoués.
