--- a/docs/_posts/1870-11-02-2-novembre-1870.md
+++ b/docs/_posts/1870-11-02-2-novembre-1870.md
@@ -24,7 +24,7 @@ Toutes les Mairies de la Banlieue se trouvent dans Paris, le travail des
 Régistres va se faire dans la journée et la nuit, et sans carte d'électeur, on
 signera avant de voter.
 
-On parle très sérieusement d'un armistice que Mr Tiers serait chargé de
+On parle très sérieusement d'un armistice que M<sup>r</sup> Tiers serait chargé de
 négocier en ce moment. Vous devez être au courant de cette nouvelle, et la
 Gazette des Absents que Monsieur Louis vous envoie, vous donnera de plus grands
 détails, que je ne puis le faire, sur tout ce qui se passe.
