--- a/docs/_posts/1870-11-05-5-novembre-1870.md
+++ b/docs/_posts/1870-11-05-5-novembre-1870.md
@@ -21,11 +21,11 @@ cependant quelques communes qui n'ont pas encore transmis leurs votes:
 Nous nous trouvons donc en présence de 62,638 ennemis de plus, mais pour le
 moment, ils ne nous inquiètent guere.
 
-Mr Ernest Baroche, fils de l'ancien Ministre, a été tué à l'affaire du Bourget,
+M<sup>r</sup> Ernest Baroche, fils de l'ancien Ministre, a été tué à l'affaire du Bourget,
 il était commandant d'un bataillon de Mobiles.
 
 Tout est calme autour de Paris, on attend sans doute la solution de la question
-de l'armistice qui ne paraît pas devoir se conclure. Mr de Bismarck mettrait
+de l'armistice qui ne paraît pas devoir se conclure. M<sup>r</sup> de Bismarck mettrait
 encore des bâtons dans les roues. La condition du ravitaillement serait
 expressément repoussée par la Prusse, et elle n'admettrait qu'avec des
 réserves, le vote de l'Alsace et de la Loraine, le Gouvernement
