--- a/docs/_posts/1870-11-08-8-novembre-1870.md
+++ b/docs/_posts/1870-11-08-8-novembre-1870.md
@@ -14,7 +14,7 @@ Je vous confirme, Monsieur, ma lettre du 7 C<sup>t</sup>.
 
 Les dernières espérances, sur le succès de l'armistice, s'évanouissent, la
 circulaire de Jules Favre aux agents diplomatiques, parue ce matin au Journal
-officiel, ne laisse plus aucun doute, les prétentions de Mr de Bismarck ne
+officiel, ne laisse plus aucun doute, les prétentions de M<sup>r</sup> de Bismarck ne
 peuvent être admises. Il ne nous reste plus qu'à nous armer de courage, pour
 défendre notre honneur, notre foyer et l'indépendance de la patrie.
 
