--- a/docs/_posts/1870-11-13-13-novembre-1870.md
+++ b/docs/_posts/1870-11-13-13-novembre-1870.md
@@ -37,6 +37,6 @@ pour l'étranger, et sur la réponse affirmative, je ferai un essai avec vous. L
 dépêche-réponse peut se faire aussi par des phrases dont chaque mot vous
 coûtera 50 centimes.
 
-Nous dinons ce soir chez Mr Louis qui nous conduit à huit heures entendre un
+Nous dinons ce soir chez M<sup>r</sup> Louis qui nous conduit à huit heures entendre un
 joli concert à l'opera au bénéfice de la malheureuse ville de Chateaudun.
 Veuillez agréer, Monsieur, mes salutations bien empressées.
