--- a/docs/_posts/1870-12-02-2-decembre-1870.md
+++ b/docs/_posts/1870-12-02-2-decembre-1870.md
@@ -26,7 +26,7 @@ officiers supérieurs sont tombés tués ou blessés, mais la puissance de notre
 artillerie a diminué de beaucoup nos pertes qui eussent été énormes, car les
 différents combats ont été longs et acharnés.
 
-Mr Dolfus Agent de change, que vous devez connaître, et qui chef d'Escadron de
+M<sup>r</sup> Dolfus Agent de change, que vous devez connaître, et qui chef d'Escadron de
 la Garde-Nationale avait été chargé d'organiser, en Alsace, un corps de
 Francs-Tireurs, vient d'être nommé Chevalier de la Légion d'honneur.
 Prisonnier, il allait être fusillé, lorsqu'un engagement entre son escorte et
