--- a/docs/_posts/1870-07-13-13-juillet-1870.md
+++ b/docs/_posts/1870-07-13-13-juillet-1870.md
@@ -10,7 +10,7 @@ destination: Heidelberg
 Monsieur A. Grünberg, Heidelberg
 
 J'ai l'honneur de vous confirmer ma lettre du 12 C<sup>t</sup>. J'ai appris aujourd'hui
-par Mr Dugied, que les enfants de son Excellence étaient arrivés à Dijon
+par M<sup>r</sup> Dugied, que les enfants de son Excellence étaient arrivés à Dijon
 seulement pour le dernier bateau et que Ss. Ece ne partirait pour la France,
 que par le bateau du 29 C<sup>t</sup>., s'arrêtant à Dijon deux ou trois jours, avant de
 gagner Paris.
