--- a/docs/_posts/1870-08-05-5-aout-1870.md
+++ b/docs/_posts/1870-08-05-5-aout-1870.md
@@ -12,13 +12,13 @@ Monsieur A. Grünberg, à Alexandrie
 
 J'ai l'honneur de vous confirmer ma lettre du 4 C<sup>t</sup>, par Vapeur Français
 <ins>exceptionnel</ins>, qui a du quitter Marseille le 6 C<sup>t</sup>. Je vous remets inclus copie
-de cette lettre qui en contenait une de Madame Grünberg, et une de Mr Kunst.
+de cette lettre qui en contenait une de Madame Grünberg, et une de M<sup>r</sup> Kunst.
 
-Mr Kunst m'a remis, ce matin, fs 51,000. pour les échéances Jacques de ce
+M<sup>r</sup> Kunst m'a remis, ce matin, fs 51,000. pour les échéances Jacques de ce
 jour. La Banque en a présenté pour la somme de fs <ins>46,580</ins>. Il reste une
 Acceptation de <ins>fs 4,350</ins> qui n'a pas encore été présentée à l'encaissement.
 
-Mr Kunst m'a chargé de vous envoyer la dépêche suivante:
+M<sup>r</sup> Kunst m'a chargé de vous envoyer la dépêche suivante:
 
 > Elisabeth et enfants très bien portants, rien de nouveau, tout en ordre.
 
@@ -28,7 +28,7 @@ Mme Ismalun est à Villers-sur-Mer, je lui adresse deux plis venant d'Egypte
 distribués ce matin. Rien encore pour vous.
 
 La Tte de <ins>fs 4,350</ins> vient d'être présentée à l'encaissement, elle est
-acquittée pour Hadamard & Bruhl à qui Mr Jacques l'avait négociée.
+acquittée pour Hadamard & Bruhl à qui M<sup>r</sup> Jacques l'avait négociée.
 
 Inclus une lettre de Madame Grünberg, la copie de celle-ci vous arrivera par la
 voie de Brindisi.
