--- a/docs/_posts/1870-09-13-13-septembre-1870.md
+++ b/docs/_posts/1870-09-13-13-septembre-1870.md
@@ -14,7 +14,7 @@ Je vous confirme ma lettre d'hier, et crainds bien que celleci ne vous
 parvienne plus, ou dumoins fort tard, car Paris va se fermer et le service des
 lettres va certainement en souffrir.
 
-J'ai reçu une lettre de Mr Simardetti, il demande si il peut fournir sur vous
+J'ai reçu une lettre de M<sup>r</sup> Simardetti, il demande si il peut fournir sur vous
 une traite du montant des coupons d'intérêts que vous avez encaissés pour lui,
 ou s'il n'est pas préférable qu'il attende que le calme soit rétabli en France.
 Je lui ai répondu que ce serait courir des risques que de disposer sur vous
@@ -26,7 +26,7 @@ valeurs à vous à l'étranger et que vous étiez pour le moment à Vienne.
 Amand a reçu de la mairie de son pays l'ordre de partir, il vient de me
 procurer un homme de 5ct par jours pour soigner Latis.
 Louis me dit que Madame Grünberg lui aurait dit que si Amand partait il
-faudrait confier Latis à un de vos amis, je vais voir Mr Servant à ce sujet.
+faudrait confier Latis à un de vos amis, je vais voir M<sup>r</sup> Servant à ce sujet.
 
 La revue passée par le Gouverneur de Paris le Gal Trochu a été splendide d'élan
 et d'enthousiasme, seulement en voyant passer toutes ces courageuses phalanges
