--- a/docs/_posts/1870-09-18-18-septembre-1870.md
+++ b/docs/_posts/1870-09-18-18-septembre-1870.md
@@ -19,7 +19,7 @@ j'ai éprouvé en vous lisant. Il n'y a pas de jour que nous ne recevions des
 lettres de parents et d'amis qui nous témoignent toute leur sympaties, et
 croyez bien que les vôtres nous sont chères à plus d'un titre.
 
-Je vois Mr L. Rau presque tous les jours, nous attendons les événements,
+Je vois M<sup>r</sup> L. Rau presque tous les jours, nous attendons les événements,
 plusieurs affaires ont eu lieu déjà dans les environs de Paris, mais les
 détails manquent. A partir de ce matin, toutes les lignes de chemin de fer sont
 coupées, il n'y a que les trains de Versailles, de St Germain, et de Vincennes
