--- a/docs/_posts/1870-11-06-6-novembre-1870.md
+++ b/docs/_posts/1870-11-06-6-novembre-1870.md
@@ -14,7 +14,7 @@ Je vous confirme, Monsieur, ma lettre du 5 C<sup>t</sup>.
 
 Le bruit court aujourd'hui que la question d'armistice n'est pas encore
 complètement vidée. Les puissances étrangères, malgré les prétentions
-impossibles de Mr de Bismarck, ne croiraient pas encore terminées toutes
+impossibles de M<sup>r</sup> de Bismarck, ne croiraient pas encore terminées toutes
 négociations. La Russie, sur laquelle on semble beaucoup compter en France, et
 avec juste raison, aurait pris l'initiative de vouloir continuer à négocier,
 jusqu'à ce qu'une réponse fût venue à St Pétersbourg. L'Armistice suivie d'une
