--- a/docs/_posts/1870-11-14-14-novembre-1870-(Clara).md
+++ b/docs/_posts/1870-11-14-14-novembre-1870-(Clara).md
@@ -5,7 +5,7 @@ place: Paris
 author: Clara Guillier
 recipient: Elisabeth Grünberg
 destination: Munich
-post_scriptum: Mille choses aimables à Mr et Mme Kunst.
+post_scriptum: Mille choses aimables à M<sup>r</sup> et Mme Kunst.
 ---
 
 Bien chère Madame,
